--- a/src/app/view-report/report-usage/last-uses/last-uses.component.html
+++ b/src/app/view-report/report-usage/last-uses/last-uses.component.html
@@ -7,7 +7,7 @@
         <h3 matLine> {{getBoatName(u.boatID)}} </h3>
         <p matLine>
           <span mat-line>{{u.duration}} hours</span>
-          <span mat-line>{{u.date.toDate() | date}} </span>
+          <span mat-line>{{u.endTime.toDate() | date}} </span>
         </p>
       </mat-list-item>
     </mat-list>
