Usage: ask for driver of boats name
Validated as a required field #11

--- a/src/app/view-report/report-usage/report-usage.component.html
+++ b/src/app/view-report/report-usage/report-usage.component.html
@@ -39,6 +39,14 @@
                         </mat-error>
                       </mat-form-field>
                     </tr>
+                    <tr>
+                      <mat-form-field>
+                        <input matInput formControlName="driver" placeholder="Boat Driver" required type="text">
+                        <mat-error *ngIf="formErrors.driver">
+                          {{formErrors.driver}}
+                        </mat-error>
+                      </mat-form-field>
+                    </tr>
                   </table>
                 </td>
               </tr>
