--- a/src/app/view-report/report-usage/report-usage.component.html
+++ b/src/app/view-report/report-usage/report-usage.component.html
@@ -12,15 +12,15 @@
                 <label>Select the boat you used</label>
                 <br />
                 <mat-form-field>
-                <mat-select placeholder="Boat Name" formControlName="boatID" required>
+                  <mat-select placeholder="Boat Name" formControlName="boatID" required>
 
-                  <mat-option *ngFor="let id of boats" [value]="id">{{id}}</mat-option>
-                  <mat-error *ngIf="formErrors.boatID">
-                    {{formErrors.boatID}}
-                  </mat-error>
+                    <mat-option *ngFor="let id of boats" [value]="id">{{id}}</mat-option>
+                    <mat-error *ngIf="formErrors.boatID">
+                      {{formErrors.boatID}}
+                    </mat-error>
 
-                </mat-select>
-              </mat-form-field>
+                  </mat-select>
+                </mat-form-field>
                 <br />
                 <br />
                 <button mat-button matStepperNext type="button">Next</button>
@@ -29,11 +29,23 @@
                 <ng-template matStepLabel>When</ng-template>
 
                 <label>Start Time</label> <br />
-                <w-mat-timepicker color="primary" label="Select Start Time" [(userTime)]="startTime"></w-mat-timepicker>
+                <mat-form-field>
+                  <input matInput atp-time-picker formControlName="startTime" type="time" theme="light" start='00:00' end='23:59' arrowStyle="{'background': 'orange', 'color': 'white'}" />
+                  <mat-error *ngIf="formErrors.startTime">
+                    {{formErrors.startTime}}
+                  </mat-error>
+                </mat-form-field>
 
-                <br />
-                <label>End Time</label> <br />
-                <w-mat-timepicker color="primary" label="Select End Time" [(userTime)]="endTime"></w-mat-timepicker>
+                <br /><label>End Time</label> <br />
+                <mat-form-field>
+                  <input matInput atp-time-picker formControlName="endTime" type="time" theme="light" start='00:00' end='23:59' arrowStyle="{'background': 'orange', 'color': 'white'}" />
+                  <mat-error *ngIf="formErrors.endTime">
+                    {{formErrors.endTime}}
+                  </mat-error>
+                </mat-form-field>
+                <mat-error *ngIf="this.usageForm.get('formArray').get([1]).errors?.notInRange && this.usageForm.get('formArray').get([1]).dirty ">
+                  End time must be after start time
+                </mat-error>
                 <br />
                 <label>Date</label> <br />
                 <mat-form-field>
