Display Usage in accordion style
Defaults to showing the boat name, date, duration and driver name. However, each usage can be expanded to view the boat crew and weather conditions. #14

--- a/src/app/view-report/report-usage/usage-graphs/usage-graphs.component.html
+++ b/src/app/view-report/report-usage/usage-graphs/usage-graphs.component.html
@@ -14,7 +14,7 @@
               <img matListAvatar src="assets/images/boat_{{i}}.png" alt={{getBoatName(u.boatID)}}>
               <h3 matLine> {{getBoatName(i)}} </h3>
               <p matLine>
-                <span mat-line>{{u}} hours</span>
+                <span mat-line>{{shortDuration(u)}} hours</span>
               </p>
             </mat-list-item>
           </mat-list>
