--- a/src/app/view-report/report-usage/last-uses/last-uses.component.html
+++ b/src/app/view-report/report-usage/last-uses/last-uses.component.html
@@ -6,7 +6,7 @@
         <img matListAvatar src="assets/images/boat_{{u.boatID}}.png" alt={{getBoatName(u.boatID)}}>
         <h3 matLine> {{getBoatName(u.boatID)}} </h3>
         <p matLine>
-          <span mat-line>{{u.duration}} hours</span>
+          <span mat-line>{{shortDuration(u.duration)}} hours</span>
           <span mat-line>{{u.endTime.toDate() | date}} </span>
         </p>
       </mat-list-item>
