--- a/src/app/view-view/view-usage/view-usage.component.html
+++ b/src/app/view-view/view-usage/view-usage.component.html
@@ -1,10 +1,3 @@
-<div class="noPrint" fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
-<div fxFlex.gt-lg="1280px" fxFlex>
-    <div fxLayout="column" class="content">
-        <last-uses fxFlex="100" fxFlex.lt-md="98" style="padding-bottom: 8px;"></last-uses>
-        <usage-graphs [dataLabel]="'Hours used'" [chartTitle]="'Total Boat Usage'" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px"></usage-graphs>
-    </div>
-</div>
-<div class="noPrint" fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
-
-  
+<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+  <usage-card fxFlex="100" [usages]="usages"></usage-card>
+<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
