--- a/src/app/view-view/view-usage/view-usage.component.html
+++ b/src/app/view-view/view-usage/view-usage.component.html
@@ -1,3 +1,3 @@
-<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div fxFlex="20" fxFlex.lt-md="2" fxFlex.gt-lg="calc(50% - 640px)"></div>
   <usage-card fxFlex="100" [usages]="usages"></usage-card>
-<div fxFlex.gt-lg="calc(50% -1280px)" fxFlex="20" fxFlex.lt-md="2"></div>
+<div fxFlex="20" fxFlex.lt-md="2" fxFlex.gt-lg="calc(50% - 640px)"></div>
