Basic authorisation for admins & functionality (#9)
* Scaffolding files #1

* Update packages

* Integrate with FirebaseUI: this provides registration and login

* Cloud Function framework files

* Link to breakagestest Firebase project

* Create userprofile on account creation.

Default role is user

close #2

* Remove unused login

* Logout in side menu #1

* Store userprofile information in client #1

* Begin edit mode for safety documents #5

* update packages

* Update DocLinks to have firestore id/key

* Base UI for CRUD operations with the safety docs list #5

* Firestore transaction for CRUD operations with the safetydocs #5

* Ability to undo action from snackbar #5

* Fix: undo functionality when the last action was adding of a new document #5

* Improvement: decalre eventemmiter types

* Improvement: dynamic updating of admin state

* Cloud function: creat admin

* Starting of a location for feature #8

* Form through which to add and update boats #8

* BoatModification: retrieve and push to firebase #8

* Use Firestore information for boats #8

* Only alllow admins to add boats

* Half implemented code that I don't remember

* Properly format

* Allow user to read their role not write to it #1

* Apply rules to correct location

* Remove log

* Fix applying of filters

* Imporve how elements display #8

* Subscription ro firebase boats #8

* Missed one from last commit #8

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,9 +28,25 @@
   <mat-sidenav class="sidenav noPrint" #sidenav mode="over">
     <img id="logo-image-drawer" src="assets/images/logo.png" alt="NPYC Logo" />
     <mat-nav-list>
+
+      <hr />
+      <h3 matSubheader>Tasks</h3>
       <a mat-list-item *ngFor="let routeLink of routeLinks; let i = index" [routerLink]="routeLink.link" (click)="sidenav.close()">
           {{routeLink.label}}
       </a>
+      <ng-container *ngIf=AUTH.isAdmin>
+      <hr />
+      <h3 matSubheader>Admin</h3>
+      <a mat-list-item
+          [routerLink]="adminLink.link"
+          (click)="sidenav.close()">
+          {{adminLink.label}}
+      </a>
+      </ng-container>
+      <hr />
+      <h3 matSubheader>Account</h3>
+      <signup></signup>
+      <hr />
     </mat-nav-list>
     <br />
     <button mat-button class="nav-button" (click)="toggleDark(); sidenav.close();">TOGGLE DARK THEME</button>
