--- a/src/app/view-report/report-issue/report-issue.component.html
+++ b/src/app/view-report/report-issue/report-issue.component.html
@@ -31,7 +31,7 @@
             <ng-template matStepLabel>Enter Breakage Info</ng-template>
             <mat-form-field>
               <mat-select placeholder="Boat Number" formControlName="boatID" name="boatNumber" required>
-                <mat-option *ngFor="let id of boats" [value]="id">{{id}}</mat-option>
+                <mat-option *ngFor="let boat of boats" [value]="boat.id">{{boat.name}}</mat-option>
                 <mat-error *ngIf="formErrors.boatID">
                   {{formErrors.boatID}}
                 </mat-error>
