Feature: admins can upgrade users to admins (#12)
* Bring features up to date (#10)

* Basic authorisation for admins & functionality (#9)

* Scaffolding files #1

* Update packages

* Integrate with FirebaseUI: this provides registration and login

* Cloud Function framework files

* Link to breakagestest Firebase project

* Create userprofile on account creation.

Default role is user

close #2

* Remove unused login

* Logout in side menu #1

* Store userprofile information in client #1

* Begin edit mode for safety documents #5

* update packages

* Update DocLinks to have firestore id/key

* Base UI for CRUD operations with the safety docs list #5

* Firestore transaction for CRUD operations with the safetydocs #5

* Ability to undo action from snackbar #5

* Fix: undo functionality when the last action was adding of a new document #5

* Improvement: decalre eventemmiter types

* Improvement: dynamic updating of admin state

* Cloud function: creat admin

* Starting of a location for feature #8

* Form through which to add and update boats #8

* BoatModification: retrieve and push to firebase #8

* Use Firestore information for boats #8

* Only alllow admins to add boats

* Half implemented code that I don't remember

* Properly format

* Allow user to read their role not write to it #1

* Apply rules to correct location

* Remove log

* Fix applying of filters

* Imporve how elements display #8

* Subscription ro firebase boats #8

* Missed one from last commit #8

* Upgrade packages: Angular 7.0

* Accessibility issues: should be public

* Correct build output path to dist/

* Update auth UI and add subscriptions

* Place holder image if none provided

* Process usage data to get last use. last month, totals

* Remove test log

* Firestore: default to no access #8

* Authentication: better state handling #8

* Users: display a list of users and option to upgrade them to admins #4

* Somehow lost a bracket

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <button style="margin-left:5px;" mat-icon-button (click)="sidenav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
+    <mat-icon>menu</mat-icon>
+  </button>
   <span id="menuSpacer"></span>
   <span><img id="menuLogo" src="assets/images/logoNoText.png" alt="NPYC Logo" /></span>
   <span id="menuSpacer"></span>
@@ -13,35 +13,29 @@
 
   <span fxHide.lt-md>
     <nav mat-tab-nav-bar>
-      <a mat-tab-link
-          *ngFor="let routeLink of routeLinks; let i = index"
-          [routerLink]="routeLink.link"
-          routerLinkActive #rla="routerLinkActive"
-          [active]="rla.isActive">
-          {{routeLink.label}}
+      <a mat-tab-link *ngFor="let routeLink of routeLinks" [routerLink]="routeLink.link" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+        {{routeLink.label}}
       </a>
     </nav>
   </span>
 </mat-toolbar>
 
-<mat-sidenav-container class="content" fullscreen [class.app-dark]="isDarkTheme" >
+<mat-sidenav-container class="content" fullscreen [class.app-dark]="isDarkTheme">
   <mat-sidenav class="sidenav noPrint" #sidenav mode="over">
     <img id="logo-image-drawer" src="assets/images/logo.png" alt="NPYC Logo" />
     <mat-nav-list>
 
       <hr />
       <h3 matSubheader>Tasks</h3>
-      <a mat-list-item *ngFor="let routeLink of routeLinks; let i = index" [routerLink]="routeLink.link" (click)="sidenav.close()">
-          {{routeLink.label}}
+      <a mat-list-item *ngFor="let routeLink of routeLinks" [routerLink]="routeLink.link" (click)="sidenav.close()">
+        {{routeLink.label}}
       </a>
-      <ng-container *ngIf=AUTH.isAdmin>
-      <hr />
-      <h3 matSubheader>Admin</h3>
-      <a mat-list-item
-          [routerLink]="adminLink.link"
-          (click)="sidenav.close()">
+      <ng-container *ngIf=isAdmin>
+        <hr />
+        <h3 matSubheader>Admin</h3>
+        <a mat-list-item [routerLink]="adminLink.link" (click)="sidenav.close()">
           {{adminLink.label}}
-      </a>
+        </a>
       </ng-container>
       <hr />
       <h3 matSubheader>Account</h3>
@@ -63,24 +57,24 @@
   </mat-sidenav>
 
   <div id="scrollId" class="sidenav-content">
-   <div id="section-to-print"><router-outlet></router-outlet></div>
+    <div id="section-to-print">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 
   <!-- Bottom Navigation Bar -->
-    <div class="bottom-navigation bg-color-primary" fxHide.gt-sm>
-      <nav mat-tab-nav-bar>
-        <a fxFlex="calc(100%/{{routeLinks.length}})" mat-tab-link
-            *ngFor="let routeLink of routeLinks; let i = index"
-            [routerLink]="routeLink.link"
-            routerLinkActive #rla="routerLinkActive"
-            [active]="rla.isActive">
+  <div class="bottom-navigation bg-color-primary" fxHide.gt-sm>
+    <nav mat-tab-nav-bar>
+      <a fxFlex="calc(100%/{{routeLinks.length}})" mat-tab-link *ngFor="let routeLink of routeLinks" [routerLink]="routeLink.link" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
 
-              <div fxLayout="column">
-                <div fxFlex><mat-icon svgIcon="{{routeLink.link}}"></mat-icon></div>
-                <div style="margin-top: -10px;" fxFlex>{{routeLink.label}}</div>
-              </div>
+        <div fxLayout="column">
+          <div fxFlex>
+            <mat-icon svgIcon="{{routeLink.link}}"></mat-icon>
+          </div>
+          <div style="margin-top: -10px;" fxFlex>{{routeLink.label}}</div>
+        </div>
 
-        </a>
-      </nav>
-    </div>
+      </a>
+    </nav>
+  </div>
 </mat-sidenav-container>
