--- a/src/app/authenticate/signup/signup.component.html
+++ b/src/app/authenticate/signup/signup.component.html
@@ -1,2 +1,2 @@
 <firebase-ui></firebase-ui>
-<div *ngIf="!FIREBASE_AUTH.authState"><button mat-button (click)="logout()">Logout</button></div>
+<div *ngIf="authState"><button mat-button (click)="logout()">Logout</button></div>
