--- a/src/app/view-report/report-usage/usage-graphs/usage-graphs.component.html
+++ b/src/app/view-report/report-usage/usage-graphs/usage-graphs.component.html
@@ -1,5 +1,4 @@
-
-<mat-card fxFlex="70" fxFlex.lt-md="98"  style="height:100%;" class="card_bottom_pad print-no-split">
+<mat-card fxFlex="70" fxFlex.lt-md="98" style="height:100%;" class="card_bottom_pad print-no-split">
   <mat-card-title>{{chartTitle}}</mat-card-title>
   <mat-card-content>
     <canvas baseChart [datasets]="chartData" [colors]="colors" [labels]="chartLabels" [options]="chartOptions" [legend]="chartLegend" [chartType]="chartType"></canvas>
@@ -7,16 +6,16 @@
 </mat-card>
 
 <mat-card fxFlex="30" fxFlex.lt-md="98" style="height:100%;" class="card_bottom_pad print-no-split">
-    <mat-card-title>Usage Last Month</mat-card-title>
-    <mat-card-content>
-        <mat-list>
-            <mat-list-item *ngFor="let u of usageLastMonth; let i = index">
-              <img matListAvatar src="assets/images/boat_{{i}}.png" alt={{getBoatName(u.boatID)}}>
-              <h3 matLine> {{getBoatName(i)}} </h3>
-              <p matLine>
-                <span mat-line>{{shortDuration(u)}} hours</span>
-              </p>
-            </mat-list-item>
-          </mat-list>
-    </mat-card-content>
+  <mat-card-title>Usage Last Month</mat-card-title>
+  <mat-card-content>
+    <mat-list>
+      <mat-list-item *ngFor="let item of usageLastMonth; ">
+        <img matListAvatar src="assets/images/boat_{{item.boat}}.png" onerror="if (this.src !== 'assets/images/noImage.png') this.src = 'assets/images/noImage.png';" alt={{getBoatName(item.boat)}} />
+        <h3 matLine> {{getBoatName(item.boat)}} </h3>
+        <p matLine>
+          <span mat-line>{{item.duration}} hours</span>
+        </p>
+      </mat-list-item>
+    </mat-list>
+  </mat-card-content>
 </mat-card>
