--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <mat-icon>menu</mat-icon>
   </button>
   <span id="menuSpacer"></span>
-  <span><img id="menuLogo" src="assets/images/logoNoText.png" alt="NPYC Logo" /></span>
+  <span><img id="menuLogo" src="assets/images/logoNoText.png" alt="TRIYA Logo" /></span>
   <span id="menuSpacer"></span>
   <span id="menuTitle">
     {{title}}
@@ -22,7 +22,7 @@
 
 <mat-sidenav-container class="content" fullscreen [class.app-dark]="isDarkTheme">
   <mat-sidenav class="sidenav noPrint" #sidenav mode="over">
-    <img id="logo-image-drawer" src="assets/images/logo.png" alt="NPYC Logo" />
+    <img id="logo-image-drawer" src="assets/images/logo.png" alt="TRIYA Logo" />
     <mat-nav-list>
 
       <hr />
@@ -50,7 +50,7 @@
       <a style="text-decoration: none;" href="https://laserflash.tk/" mat-list-item>
       ©2017 BrynTBennett
     </a>
-      <a style="text-decoration: none;" href="https://github.com/LaserFlash/NPYC-UsageMaintenanceTracker" mat-list-item>
+      <a style="text-decoration: none;" href="https://github.com/LaserFlash/TRIYA-UsageMaintenanceTracker" mat-list-item>
       <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" /> &nbsp; Source Code
     </a>
     </mat-list>
