--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,16 +1,16 @@
 @import '~@angular/material/theming';
 @include mat-core();
-$primary: mat-palette($mat-lime, 900);
-$accent:  mat-palette($mat-lime);
-$warn:    mat-palette($mat-red);
+$primary: mat-palette($mat-red, 600);
+$accent:  mat-palette($mat-red);
+$warn:    mat-palette($mat-yellow);
 
 $theme:  mat-light-theme($primary, $accent, $warn);
 
 @include angular-material-theme($theme);
 
 .app-dark {
-  $dark-primary: mat-palette($mat-lime, 900);
-  $dark-accent:  mat-palette($mat-lime);
+  $dark-primary: mat-palette($mat-red, 600);
+  $dark-accent:  mat-palette($mat-red);
   $dark-warn:    mat-palette($mat-yellow);
 
   $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
