--- a/src/app/view-report/report-usage/report-usage.component.html
+++ b/src/app/view-report/report-usage/report-usage.component.html
@@ -7,6 +7,10 @@
         <mat-card-content>
           <form (ngSubmit)="onSubmit()" [formGroup]="usageForm" novalidate>
             <mat-vertical-stepper #stepper formArrayName="formArray" [linear]="isLinear">
+
+              <!--
+                Boat selection step
+              -->
               <mat-step formGroupName="0" [stepControl]="usageForm.get('formArray').get([0])">
                 <ng-template matStepLabel>Boat</ng-template>
                 <label>Select the boat you used</label>
@@ -25,6 +29,10 @@
                 <br />
                 <button mat-button matStepperNext type="button">Next</button>
               </mat-step>
+
+              <!--
+                Usage date and time selection
+              -->
               <mat-step formGroupName="1" [stepControl]="usageForm.get('formArray').get([1])">
                 <ng-template matStepLabel>When</ng-template>
 
@@ -62,6 +70,11 @@
                 <button mat-button matStepperPrevious type="button">Back</button>
                 <button mat-button matStepperNext type="button">Next</button>
               </mat-step>
+
+              <!--
+                People involved
+                e.g. crew and skipper names
+              -->
               <mat-step formGroupName="2" [stepControl]="usageForm.get('formArray').get([2])">
                 <ng-template matStepLabel>People</ng-template>
 
@@ -81,8 +94,12 @@
                     <mat-form-field [formGroupName]="i">
                       <input formControlName="name" type="text" matInput placeholder="Crew {{i+1}}">
                     </mat-form-field>
-                    <button *ngIf="i > 0 || i !== formCrewArray.controls.length - 1" mat-icon-button type="button" (click)="removeCrew(i)"><mat-icon>remove</mat-icon></button>
-                    <button *ngIf="i >= formCrewArray.controls.length - 1" mat-icon-button type="button" (click)="addArrayCrew()"><mat-icon>add</mat-icon></button>
+                    <button *ngIf="i > 0 || i !== formCrewArray.controls.length - 1" mat-icon-button type="button" (click)="removeCrew(i)">
+                      <mat-icon>remove</mat-icon>
+                    </button>
+                    <button *ngIf="i >= formCrewArray.controls.length - 1" mat-icon-button type="button" (click)="addArrayCrew()">
+                      <mat-icon>add</mat-icon>
+                    </button>
                   </div>
                 </div>
 
@@ -90,6 +107,10 @@
                 <button mat-button matStepperPrevious type="button">Back</button>
                 <button mat-button matStepperNext type="button">Next</button>
               </mat-step>
+
+              <!--
+                Weather conditions
+              -->
               <mat-step formGroupName="3" [stepControl]="usageForm.get('formArray').get([3])">
                 <ng-template matStepLabel>Weather Conditions</ng-template>
 
