Adaption: Usage Form know asks for the type of boat being reported for.
This in turn allows for differrent information to be displayed later on, 
such as only allowing selection of 420's or RiB's
#2

--- a/src/app/view-report/report-usage/report-usage.component.css
+++ b/src/app/view-report/report-usage/report-usage.component.css
@@ -20,3 +20,12 @@
       min-height:40cm;
   }
 }
+
+.radio-group {
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.radio-button {
+  margin: 5px;
+}
